force-app/main/default/objects/Builder_Conversion_Rate__c/Builder_Conversion_Rate__c.object-meta.xml
<CustomObject>
    <description>Stores per-builder per-bucket conversion rate computed nightly from historical data. Used by the Forecasting Demand Modeling Layer to weight projected releases by builder-specific historical accuracy.</description>
    <label>Builder Conversion Rate</label>
    <nameField>
        <displayFormat>BCR-{YYYY}-{0000}</displayFormat>
        <label>Conversion Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builder Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>