force-app/main/default/objects/Builder_Conversion_Rate__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Conversion_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>