force-app/main/default/objects/Builder_Conversion_Rate__c/fields/Computed_Date__c.field-meta.xml
<CustomField>
    <fullName>Computed_Date__c</fullName>
    <label>Computed Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>